packages/svelte/tests/validator/samples/class-state-constructor-5/input.svelte.js
export class Counter {
	// prettier-ignore
	'count' = $state(0);
	constructor() {
		this['count'] = $state(0);
	}
}
